--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,29 @@
-{}
+{
+  "compilerOptions": {
+    "module": "ES2022",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "paths": {
+      "@/*": [
+        "./src/*",
+      ],
+      "app/*": [
+        "./src/apps/*"
+      ]
+    },
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
+  }
+}
